--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
 			<div class="media">
   				<div class="media-left">
     				<a href="#">
-     				 <img class="media-object" src="..." alt="...">
+     				 <img class="media-object" src="assets/images/20171027_212932.jpg" height="225" width="150">
     				</a>
   				</div>
  				 <div class="media-body">
     				<h4 class="media-heading"></h4>
-    					Balh lajfejfoajfoe fjoej oawj feowj ew
+    					<p>I was born in Austin and have only lived in one other city, Houston, where I went to law school and worked as an attorney for several years. I graduated from The University of Texas at Austin with a Political Science degree and pursued law school a year later.</p>
+    					<p>While Houston is a great city with almost limitless food possibilities, Austin is where my heart is. I love the vibe and outdoor activities such as hiking and biking. I also love (and hate) to golf and Austin is very scenic with hills and the beautiful Colorado River running through the city.</p>
   				</div>
 			</div>
 		</div>
