--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>About Me</title>
 
+<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 </head>
@@ -22,17 +24,17 @@
       <a class="navbar-brand" href="#">Jon Chan</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="./index.html">About</a></li>
+        <li><a href="./portfolio.html">Portfolio</a></li>
+        <li><a href="./contact.html">Contact</a></li>
     </ul>
 	</div>
 	</nav>
 </div>
-
 <div class="container">
 	<div class="row">
 		<div class="col-md-8">
+      <div class="background">
 			<div class="page-header">
   				<h1>About Me</h1>
 			</div>
@@ -48,12 +50,36 @@
     					<p>While Houston is a great city with almost limitless food possibilities, Austin is where my heart is. I love the vibe and outdoor activities such as hiking and biking. I also love (and hate) to golf and Austin is very scenic with hills and the beautiful Colorado River running through the city.</p>
   				</div>
 			</div>
+    </div>
 		</div>
-		<div class="col-md=4">
-
+		<div class="col-md-4">
+      <div class="background">
+			<h3>Connect with Me<span class="label label-default"></span></h3>
+			<div class="row">
+				<div class="col-xs-6 col-md-3">
+    				<a href="#" class="thumbnail">
+      				<img src="https://image.flaticon.com/icons/svg/25/25231.svg" height="50" width="50">
+    				</a>
+    			</div>
+    			<div class="col-xs-6 col-md-3">
+    				<a href="#" class="thumbnail">
+      				<img src="https://image.flaticon.com/icons/svg/174/174857.svg" height="50" width="50">
+    				</a>
+    			</div>
+    			<div class="col-xs-6 col-md-3">
+    				<a href="#" class="thumbnail">
+      				<img src="https://cdn.sstatic.net/Sites/stackoverflow/company/img/logos/so/so-icon.svg?v=6e4af45f4d66" height="50" width="50">
+    				</a>
+    			</div>
+			</div>
+    </div>
 		</div>
 	</div>
 </div>
-
+<footer>
+    <div class="container">
+      Copyright &copy; 2017 Jon Chan
+    </div>
+  </footer>
 </body>
 </html>
